# ndt_imu_localization

ndt_imu_localization/: CMakeLists.txt  package.xml
ndt_imu_localization/config/: params.yaml
ndt_imu_localization/include/: pointcloud_filter.h
ndt_imu_localization/include/ndt_imu_localization/: ndt_match.h  utility.h
ndt_imu_localization/launch/: ndt_matching.launch  pointcloud_filter.launch  pointcloud_splicing.launch
ndt_imu_localization/map/school/: map0611.yaml
ndt_imu_localization/rviz/: kitti.rviz  map_spilicing.rviz  school.rviz  subt.rviz
ndt_imu_localization/src/: imu_preintegration.cpp  ndt_matching.cpp  pointcloud_filter.cpp  pointcloud_filter_node.cpp  pointcloud_splicing.cpp  publish_pcd_map.cpp
